--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
 .nav{
     display: flex;
     justify-content: space-between;
-
     background-image: radial-gradient( circle 860px at 11.8% 33.5%,  rgba(240,30,92,1) 0%, rgba(244,49,74,1) 30.5%, rgba(249,75,37,1) 56.1%, rgba(250,88,19,1) 75.6%, rgba(253,102,2,1) 100.2% );
     padding: 0.5rem 1.6rem;
     align-items: center;
@@ -32,13 +31,14 @@
 
 }
 .navlist a{
-    color: azure;
+    color: black;
     text-decoration: none;
     font-size: 1.4rem;
     font-weight: 200;
 }
 .navlist a:hover{
-    color: black;
+    
+    color: azure;
 }
 ul{
     list-style: none;
@@ -61,36 +61,107 @@ ul{
     display: flex;
     flex-wrap: wrap;
     padding: 2rem 0rem;
+    justify-content: center;
+    align-items: center;
 }
 #img img{
-    width: 245px;
+    width: 240px;
+    height: 350px;
     margin: 0.5rem;
     box-shadow: 0px 0px 4px black;
 }
+@media (max-width: 1050px) {
+    #img{
+        width: 70%;
+    }
+    #img img{
+        width: 200px;
+        height: 300px;
+    }   
+}
+@media (max-width: 650px) {
+    #img{
+        width: 90%;
+    }
+    #img img{
+        width: 150px;
+        height: 220px;
+    }   
+}
+@media (max-width: 400px) {
+    #img img{
+        width: 100px;
+        height: 160px;
+    }  
+    #catalog h2{
+        font-size: 1.7rem;
+    } 
+}
 .welcome{
     font-size: 1.7rem;
-    text-shadow: 1px 1px 2px whitesmoke;
-    padding: 0rem 0.8rem;
+    text-shadow: 1px 1px 2px #da1e90;
+    padding: 1.5rem;
     text-align: center;
-    background-image: radial-gradient( circle 860px at 11.8% 33.5%,  rgb(244, 76, 126) 0%, rgb(247, 61, 86) 30.5%, rgb(241, 86, 51) 56.1%, rgb(251, 112, 52) 75.6%, rgb(242, 120, 39) 100.2% );
-
 }
 .knowledge{
     font-size: 2.5rem;
     text-align: center;
-    padding: 2rem;
+    padding: 1.5rem 0.5rem;
     color: black;
     text-shadow: 1px 1px 2px rgb(167, 167, 168);
 }
 #home{
     display: flex;
-    flex-direction: column;
     gap: 2rem;
     justify-content: center;
     align-items: center;
+    padding: 0rem 1rem;
+}
+.bookstoreimg{
+    padding: 0 0.5rem;
 }
 .bookstoreimg img{
     width: 400px;
     box-shadow: 0 0 3.5px black;
     border-radius: 10px;
+}
+@media (max-width:500px) {
+    #home{
+        flex-direction: column;
+    }
+    .bookstoreimg img{
+        width: 200px;
+    }
+    .welcome{
+        font-size: 1rem;
+        text-shadow: 1px 1px 2px #5b0202;
+    }
+    .nav{
+        flex-direction: column;
+    }
+    .nav img{
+        width: 70px;
+    }
+    .navlist{
+        padding: 0.35rem 0;
+    }
+    .navlist a{
+        color: white;
+        font-size: 1.1rem;
+    }
+    .navlist a:hover{
+        color: black;
+    }
+    .container{
+        gap: 3.5rem;
+    }
+}
+@media (max-width:870px) {
+    
+    .bookstoreimg img{
+        width: 220px;
+    }
+    .knowledge{
+        font-size: 1.7rem;
+    }
 }
