--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+:root{
+    scroll-behavior: smooth;
+}
 *{
     margin: 0;
     padding: 0;
@@ -16,12 +19,14 @@
     display: flex;
     justify-content: space-between;
     background-image: radial-gradient( circle 860px at 11.8% 33.5%,  rgba(240,30,92,1) 0%, rgba(244,49,74,1) 30.5%, rgba(249,75,37,1) 56.1%, rgba(250,88,19,1) 75.6%, rgba(253,102,2,1) 100.2% );
-    padding: 0.5rem 1.6rem;
+    padding: 0.4rem 4rem;
     align-items: center;
+    box-shadow: 0px 10px 50px rgb(8, 40, 133);
 }
 .nav img{
-    width: 90px;
-    border-radius: 20px;
+    width: 65px;
+    border-radius: 60px;
+    box-shadow: 4px -5px 3px #f4f4f4;
 }
 .navlist{
     display: flex;
@@ -56,7 +61,7 @@ ul{
     padding-top: 1.5rem;
 }
 #img{
-    width: 62%;
+    width: 90%;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -65,50 +70,86 @@ ul{
     align-items: center;
 }
 #img img{
-    width: 240px;
-    height: 350px;
+    width: 200px;
+    height: 285px;
     margin: 0.5rem;
     box-shadow: 0px 0px 4px black;
 }
-@media (max-width: 1050px) {
-    #img{
-        width: 70%;
-    }
+@media (max-width: 1200px) {
     #img img{
-        width: 200px;
-        height: 300px;
+        width: 170px;
+        height: 250px;
     }   
 }
 @media (max-width: 650px) {
-    #img{
-        width: 90%;
-    }
-    #img img{
-        width: 150px;
-        height: 220px;
-    }   
-}
-@media (max-width: 400px) {
     #img img{
         width: 100px;
         height: 160px;
+    }   
+}
+@media (max-width: 450px) {
+    #img img{
+        width: 70px;
+        height: 120px;
     }  
     #catalog h2{
         font-size: 1.7rem;
     } 
 }
+@media (max-width: 370px) {
+    #img{
+        width: 95%;
+    }
+    #img img{
+        width: 50px;
+        height: 84px;
+    }   
+}
 .welcome{
     font-size: 1.7rem;
     text-shadow: 1px 1px 2px #da1e90;
-    padding: 1.5rem;
+    padding: 4.5rem 1.5rem;
     text-align: center;
 }
 .knowledge{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    justify-content: center;
+    align-items: center;
     font-size: 2.5rem;
     text-align: center;
     padding: 1.5rem 0.5rem;
     color: black;
     text-shadow: 1px 1px 2px rgb(167, 167, 168);
+}
+.search{
+    font-size: 1rem;
+    background-color: #f4f4f4;
+    padding: 0.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    align-items: center;
+    border-radius: 10px;
+}
+.search input{
+    padding: 0.3rem 0.6rem;
+    border-radius: 10px;
+    border:none;
+}
+.search input:focus{
+    outline: solid 1px black;
+    outline-offset: 0;
+}
+@media (max-width:300px) {
+    .search{
+        gap: 1rem;
+        font-size: 0.9rem;
+    }
+    .search input{
+        padding: 0.3rem;
+    }
 }
 #home{
     display: flex;
@@ -118,12 +159,23 @@ ul{
     padding: 0rem 1rem;
 }
 .bookstoreimg{
-    padding: 0 0.5rem;
+    padding: 0.4rem 0.5rem;
+    position: relative;
+    text-align: center;
 }
 .bookstoreimg img{
     width: 400px;
     box-shadow: 0 0 3.5px black;
     border-radius: 10px;
+    
+}
+.textimg{
+    position: absolute;
+    bottom: 17px;
+    left: 152px;
+    color: white;
+    font-size: 1.3rem;
+    text-shadow: 2px 0 17px #000;
 }
 @media (max-width:500px) {
     #home{
@@ -140,7 +192,7 @@ ul{
         flex-direction: column;
     }
     .nav img{
-        width: 70px;
+        width: 40px;
     }
     .navlist{
         padding: 0.35rem 0;
@@ -164,4 +216,49 @@ ul{
     .knowledge{
         font-size: 1.7rem;
     }
+    .textimg{
+        font-size: 0.8rem;
+        left: 84px;
+    }
+}
+.review{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.reviewbox{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.reviewcontainer{
+    display: flex;
+    width: 80%;
+    margin: auto;
+    justify-content: center;
+}
+.box{
+    width: 30%;
+    height: 300px;
+    padding: 1rem;
+    margin: 1rem;
+    background-color: white;
+    box-shadow: 0 0 5px #6606bf;
+    border-radius: 10px;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    gap: 1.7rem;
+}
+.checked{
+    color: rgb(255, 191, 0);
+}
+.starimg{
+    display: flex;
+    gap: 1rem;
+}
+.starimg img{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
 }
