--- a/style.css
+++ b/style.css
@@ -226,6 +226,13 @@ ul{
     flex-direction: column;
     gap: 2rem;
 }
+.review h2{
+    text-align: center;
+    font-size: 2.5rem;
+    text-shadow: 1px 1px 2px aliceblue;
+    color: black;
+    padding: 1.5rem;
+}
 .reviewbox{
     display: flex;
     flex-direction: column;
@@ -236,19 +243,20 @@ ul{
     width: 80%;
     margin: auto;
     justify-content: center;
+    flex-wrap: wrap;
 }
 .box{
-    width: 30%;
-    height: 300px;
-    padding: 1rem;
-    margin: 1rem;
-    background-color: white;
-    box-shadow: 0 0 5px #6606bf;
+    width: 28%;
+    height: 300px; 
+    margin: 1rem;  
+    box-shadow: 0 0 5px #32035d;
     border-radius: 10px;
     color: black;
-    display: flex;
+    display: flex;   
+    justify-content: space-between;
     flex-direction: column;
-    gap: 1.7rem;
+    background-color: white;
+    padding: 1.5rem 1rem;
 }
 .checked{
     color: rgb(255, 191, 0);
@@ -256,9 +264,19 @@ ul{
 .starimg{
     display: flex;
     gap: 1rem;
+    align-items: center;
 }
 .starimg img{
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
+}
+.dot{
+    width: 13px;
+    height: 13px;
+    border: 2px solid black;
+    border-radius: 50%;
+    display: inline-block;
+    padding: 0.3rem;
+    margin: 0.3rem;
 }
