--- a/style.css
+++ b/style.css
@@ -285,3 +285,58 @@ ul{
 .above h4{
     font-weight: bold;
 }
+#products{
+    width: 60%;
+    margin:2rem auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0px 0px 4px black;  
+    margin-bottom: 5rem;
+}
+#products img{
+    width: 50%;
+    height: 315px;
+    object-fit: contain;
+    filter: drop-shadow(0 0 3px white);
+}
+.productcontainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    text-align: center;
+    color: black;
+    align-items: center;
+    width: 50%;
+    padding: 0.5rem;
+}
+.productcontainer h1{
+    font-size: 3rem;
+    text-shadow: 1px 1px 2px whitesmoke;
+}
+.productcontainer h4{
+    font-size: 1.2rem;
+    font-weight: lighter;
+}
+.productcontainer a{
+    text-decoration: none;
+    width: fit-content;
+    padding: 0.8rem 1.2rem;
+    border-radius: 10px;
+    background-color: aliceblue;
+    color: black;
+    font-size: 1.2rem;
+    transition: all ease 0.5s;
+}
+.productcontainer i{
+    font-size: 18px;
+    color: black;
+}
+.productcontainer a:hover{
+    background-color: black;
+    color: aliceblue;
+}
+.productcontainer a:hover i{
+    color: aliceblue;
+}
